- there is now an official git repository for epgsearch, that contains the latest 
  development. 
  First usage: 
    git clone git://projects.vdr-developer.org/vdr-plugin-epgsearch.git	
  Keep up-to-date with:
    git pull
  Web-git:
    http://projects.vdr-developer.org/git/?p=vdr-plugin-epgsearch.git
  many thanks to the maintainers of projects.vdr-developer.org, especially Tobias 
  Grimm
- Search timers now have a new action "Announce and switching". This announces the
  event via OSD right before it starts and lets you switch to its channel with 'Ok'.
  Switch timers now have the same option.
- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year
    (with century) of an event
  * %chgrp% returns the VDR channel group name corresponding to an event    
- in memory to pat: french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- finnish translation update, thanks to Rolf Ahrenberg
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event. If any epgsearch menu is open a subsequent
  SVDRP call will close it again.
- changed the maximum number of days for a timer conflict check from 99 to 14
- patch by Jörg Wendel for new graphtft patch
- Two events with both empty episode names are now handled different within the 
  feature 'Avoid repeats'. This will result in more recordings, but ensures not to 
  miss one only because of a buggy EPG.
- searchtimers: if a timers filename results in an empty string or contains 
  "!^invalid^!" it will be skipped for programming now.
- Avoid repeats: 'Compare subtitle' has now a third value 'if present' besides 'no'
  and 'yes'. With this setting epgsearch will classify two events only as equal if 
  their episode names match and are not empty. Caution: if your EPG data has no episode 
  names for different episodes don't use this option! 'yes' will then be the better