@@ -1,15 +1,22 @@
 #########################################################################
 # This is a sample template for email notifications about timer changes
+# and/or events announcements
 # (NOTE: This is a sample for a text mail, but you could use HTML as well)
 #
 # There are 3 sections that have to be defined:
 #  - "subject" to be used as mail subject
 #  - "mailbody" the body of the mail:
 #    put %update.newtimers% in the place where the list of new timers should
-#    appear. The same for %update.modtimers% and %update.deltimers% for the
-#    list of changed or deleted timers.
-#  - "timer" the description of one timer. This section is used to display one
-#    timer within a timer list, e.g. in %update.newtimers%
+#    appear. The same for %update.modtimers%, %update.deltimers% and 
+#    %update.newevents& for the list of changed or deleted timers and event
+#    announcements.
+#  - "timer" the description of one timer and "event" with the description of
+#    one event. This section is used to display one timer within a timer list, 
+#    e.g. in %update.newtimers%. The same for "event".
+#
+# All sections are optional, e.g. if you don't use event announcements you
+# can drop "%update.newevents%" in the mailbody and the "event" section. But
+# of course you should have at least a mailbody ;-)
 #
 # close each section with the correspondig end tag!
 # Please have a look at the MANUAL for the available variables.
@@ -19,7 +26,7 @@
 #########################################################################
 # here's the mail's subject definition (no CR!)
 #########################################################################
-<subject>[epgsearch] update info: %update.countnewtimers% new / %update.countmodtimers% modified / %update.countdeltimers% deleted timers</subject>
+<subject>[epgsearch] update info: %update.countnewtimers% new / %update.countmodtimers% modified / %update.countdeltimers% deleted timers / %update.countnewevents% new events</subject>
 
 
 #########################################################################
@@ -32,6 +39,7 @@
      new timers: %update.countnewtimers%
 modified timers: %update.countmodtimers%
  deleted timers: %update.countdeltimers%
+     new events: %update.countnewevents%
 
 the following timers have been added:
 ----------------------------------------------------------------------
@@ -44,6 +52,10 @@ the following timers have been modified:
 the following timers have been deleted:
 ----------------------------------------------------------------------
 %update.deltimers%
+
+the following events where found:
+----------------------------------------------------------------------
+%update.newevents%
 
 Have fun!</mailbody>
 
@@ -67,3 +79,20 @@ Summary:
 %summary%
 ----------------------------------------------------------------------
 </timer>
+
+##############################################################################
+# here's the event definition, which is used to display information about 
+# an event within the list of event announcements. You can use any variables 
+# that refer to an event. You can also use 'user defined' variables from 
+# epgsearchuservars.conf.
+##############################################################################
+<event>
+       Title: %title% ~ %subtitle% 
+   Start/End: %time_w% %date% %time%-%timeend%
+     Channel: %chlng% (%chnr%)
+      Search: %search% (%searchid%)
+
+Summary:
+%summary%
+----------------------------------------------------------------------
+</event>
